src/app/mail/mail.component.scss
/* ... */
.mailbox-sidebar-nav-link{
  .hover-icon{
    min-width: unset;
  }

  .mailbox-sidebar-nav-label .hover-icon {
    display: none;
  }

  &:hover  .mailbox-sidebar-nav-label .hover-icon  {
    display: inline-block;
  }
}

.divider-item {
  margin: 0.375rem 0.938rem;
  border-top: 1px solid $divider-color;
}

.mailbox-sidebar-footer{
  background: #29394e;
  position: absolute;
  bottom: 0;
  width: 100%;
}

.mailbox-sidebar-footer-text {
  color: rgba(255, 255, 255, 0.5);
  font-size: 0.688rem;
}

.visible-in-sm {
  display: none !important;
  @include media("<ipad", ">sm") {
    display: block !important;

    .is-sidebar-expanded & {
      display: none !important;
    }
  }
}

.hidden-in-sm {
  display: block !important;
  @include media("<ipad", ">sm") {
    display: none !important;

    .is-sidebar-expanded & {
      display: block !important;
    }
  }
}

// == Buttons
.btn-lg.mailbox-btn {
  padding: .5rem 3.43066rem; //~.5633rem 3.43066rem;
  font-size: 0.875rem;
  letter-spacing: 0.7px;
  min-width: 240px;
}

.btn-primary.mailbox-btn {
  &:hover,
  &:focus {
    background-color: #ff4d3b;
  }
}

.mailbox-btn.has-icon {
  display: flex;
  align-items: center;
  justify-content: center;
}

.btn-outline-white.mailbox-btn {
  border: 1px solid $brand-white !important;
  border-radius: 2px;
  color: $brand-white;

  &:hover,
  &:focus {
  }
}

@include media("<ipad") {
  .btn.btn-xs-squared {
    position: relative;
    justify-content: center;
    padding: 0 0;
    border: solid 1px #c0392b;
    font-size: 1.125rem;
    height: 2.25rem;
    width: 2.25rem;
    min-width: inherit;
    text-align: center;
    transition: none;

    // &::before,
    // &::after {
    // 	position: absolute;
    // 	top: 50%;
    // 	left: 50%;
    // 	content: "";
    // 	background: $brand-white;
    // 	height: 1rem;
    // 	width: 2px;
    // 	transform: translateX(-50%) translateY(-50%);
    // }

    // &::after {
    // 	height: 2px;
    // 	width: 1rem;
    // }
  }

  .is-sidebar-expanded {
    padding: .5633rem 3.43066rem;
    height: auto;
    width: 100%;

    // &::before,
    // &::after {
    // 	display: none;
    // }

    .btn.btn-xs-squared {
      font-size: 0.875rem;
      min-width: 190px;
    }

    .mailbox-compose-btn {
      .icon {
        display: none !important;
      }
    }

    .mailbox-back-btn {
      .icon {
        margin-right: 0.5rem !important;
      }
    }

    .mailbox-btn-text {
      display: block !important;
    }
  }
}

// == Mail compose button on mobile
@include media("<=sm") {
  .btn-xs-holder.is-sticky {
    position: fixed;
    top: 50%;
    right: 0.938rem;
    z-index: $zindex-default;
    transform: translateY(-50%);
  }

  .btn.btn-xs-rounded {
    justify-content: center;
    padding: 0 0;
    border-radius: 50%;
    font-size: 1.125rem !important;
    height: 3.125rem;
    width: 3.125rem;
    line-height: 3.125rem;
    min-width: inherit !important;

    &.btn-primary,
    &.btn-mail-send {
      background: $brand-primary;
      border: solid 1px #c0392b;
      box-shadow: 0 2px 4px 0 rgba(1, 9, 15, 0.3);
    }

    &.btn-success {
      border: solid 1px #2980ba;
    }
  }
}

/* Sidebar ends */

// == Actions bar
.mailbox-actionbar {
  padding: 1rem 0.938rem;
  border-bottom: 1px solid $input-border-color;

  @include media(">=ipad") {
    padding-right: 1.563rem;
    padding-left: 1.563rem;
  }

  .mailbox-actionbar-col {
    @include media("<ipad", ">sm") {
      &:first-of-type {
        flex: 0 0 70%;
        max-width: 70%;
      }

      &:last-of-type {
        flex: 0 0 30%;
        max-width: 30%;
      }
    }
  }
}
/* ... */

